--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj
@@ -23,6 +23,9 @@
     <ClCompile Include="..\..\DecoderDecoder.cpp" />
     <ClCompile Include="..\..\dllmain.cpp" />
     <ClCompile Include="..\..\Famicom.cpp" />
+    <ClCompile Include="..\..\LS139.cpp" />
+    <ClCompile Include="..\..\LS368.cpp" />
+    <ClCompile Include="..\..\LS373.cpp" />
     <ClCompile Include="..\..\NES.cpp" />
     <ClCompile Include="..\..\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -30,13 +33,18 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\SRAM.cpp" />
     <ClCompile Include="..\..\UnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\DecoderDecoder.h" />
     <ClInclude Include="..\..\Famicom.h" />
+    <ClInclude Include="..\..\LS139.h" />
+    <ClInclude Include="..\..\LS368.h" />
+    <ClInclude Include="..\..\LS373.h" />
     <ClInclude Include="..\..\NES.h" />
     <ClInclude Include="..\..\pch.h" />
+    <ClInclude Include="..\..\SRAM.h" />
     <ClInclude Include="..\..\UnitTest.h" />
   </ItemGroup>
   <ItemGroup>
