--- a/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj.filters
+++ b/Breaknes/BreaksCore/Scripts/VS2022/BreaksCore.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Breaknes.cpp">
+    <ClCompile Include="..\..\Core.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\dllmain.cpp">
@@ -99,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\CoreApi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
