Google Chrome trace for UnitTest

--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -162,6 +162,8 @@
   <ItemGroup>
     <ClCompile Include="APUTest.cpp" />
     <ClCompile Include="CoreUnitTest.cpp" />
+    <ClCompile Include="EventLog.cpp" />
+    <ClCompile Include="Json.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -174,6 +176,8 @@
   <ItemGroup>
     <ClInclude Include="APUTest.h" />
     <ClInclude Include="CoreUnitTest.h" />
+    <ClInclude Include="EventLog.h" />
+    <ClInclude Include="Json.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PPUTest.h" />
   </ItemGroup>
