--- a/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj.filters
+++ b/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="..\..\vram_ctrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\vram_ctrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
