--- a/BreaksPPU/PPUPlayerInterop/PPUPlayerInterop.vcxproj
+++ b/BreaksPPU/PPUPlayerInterop/PPUPlayerInterop.vcxproj
@@ -155,16 +155,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Breaknes\BreaksCore\LS373.h" />
+    <ClInclude Include="..\..\Breaknes\BreaksCore\SRAM.h" />
+    <ClInclude Include="NROM.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PPUPlayerBoard.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Breaknes\BreaksCore\LS373.cpp" />
+    <ClCompile Include="..\..\Breaknes\BreaksCore\SRAM.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="NROM.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="PPUPlayerBoard.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Readme.md" />
