--- a/BreaksPPU/PPUPlayerInterop/PPUPlayerInterop.vcxproj.filters
+++ b/BreaksPPU/PPUPlayerInterop/PPUPlayerInterop.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="..\..\Breaknes\BreaksCore\SRAM.cpp">
       <Filter>Borrowed from Breaknes</Filter>
     </ClCompile>
+    <ClCompile Include="PPUPlayerBoardDebug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Readme.md" />
