--- a/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
+++ b/Mappers/Scripts/VS2022/Mappers.vcxproj.filters
@@ -13,42 +13,27 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Borrowed from Breaknes">
-      <UniqueIdentifier>{489586ae-e24e-46fe-808c-d01e7a8df473}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="..\..\NES_Header.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PPUPlayerBoard.h">
+    <ClInclude Include="..\..\NROM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PPUDebug.h">
+    <ClInclude Include="..\..\pch.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Breaknes\BreaksCore\CoreApi.h">
-      <Filter>Borrowed from Breaknes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
+    <ClCompile Include="..\..\NROM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PPUPlayerBoard.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PPUDebug.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PPUPlayerBoardDebug.cpp">
+    <ClCompile Include="..\..\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Readme.md" />
+    <None Include="..\..\Readme.md" />
   </ItemGroup>
 </Project>
