--- a/Common/BaseBoardLib/Scripts/VS2022/BaseBoardLib.vcxproj.filters
+++ b/Common/BaseBoardLib/Scripts/VS2022/BaseBoardLib.vcxproj.filters
@@ -13,42 +13,42 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Borrowed from Breaknes">
-      <UniqueIdentifier>{489586ae-e24e-46fe-808c-d01e7a8df473}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PPUPlayerBoard.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PPUDebug.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Breaknes\BreaksCore\CoreApi.h">
-      <Filter>Borrowed from Breaknes</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
+    <ClCompile Include="..\..\LS139.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="..\..\LS368.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PPUPlayerBoard.cpp">
+    <ClCompile Include="..\..\LS373.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PPUDebug.cpp">
+    <ClCompile Include="..\..\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PPUPlayerBoardDebug.cpp">
+    <ClCompile Include="..\..\SRAM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Readme.md" />
+    <ClInclude Include="..\..\LS139.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\LS368.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\LS373.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\SRAM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Readme.md" />
   </ItemGroup>
 </Project>
