--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -182,9 +182,6 @@
     <ClInclude Include="PPUTest.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Breaknes\BaseLogicLib\Scripts\VS2022\BaseLogicLib.vcxproj">
-      <Project>{11aad192-46eb-4d5d-b81f-bcee11d6af8e}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\Breaks6502\M6502Core\Scripts\VS2022\M6502Core.vcxproj">
       <Project>{75210c0a-a812-4246-a179-b50d8a25a121}</Project>
     </ProjectReference>
@@ -193,6 +190,9 @@
     </ProjectReference>
     <ProjectReference Include="..\BreaksPPU\PPUSim\Scripts\VS2022\PPUSim.vcxproj">
       <Project>{ebd9b3eb-3c04-43ed-b454-e9442b21f5a0}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Common\BaseLogicLib\Scripts\VS2022\BaseLogicLib.vcxproj">
+      <Project>{11aad192-46eb-4d5d-b81f-bcee11d6af8e}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
