Set default icon

--- a/BreaksPPU/PPUPlayer/PPUPlayer.csproj
+++ b/BreaksPPU/PPUPlayer/PPUPlayer.csproj
@@ -5,17 +5,13 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
-    <ApplicationIcon>pp.ico</ApplicationIcon>
+    <ApplicationIcon></ApplicationIcon>
     <BaseOutputPath>Build\</BaseOutputPath>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="pp.ico" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Be.Windows.Forms.HexBox.Net5" Version="1.8.0" />
