--- a/Breaks6502/M6502Core/Scripts/VS2022/M6502Core.vcxproj.filters
+++ b/Breaks6502/M6502Core/Scripts/VS2022/M6502Core.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="..\..\regs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -141,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\regs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
