PAL/RGB PPU WIP

--- a/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj.filters
+++ b/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\..\patgen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\pclk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
