--- a/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj
+++ b/BreaksPPU/PPUSim/Scripts/VS2022/PPUSim.vcxproj
@@ -37,6 +37,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\pclk.cpp" />
     <ClCompile Include="..\..\ppu.cpp" />
     <ClCompile Include="..\..\regs.cpp" />
     <ClCompile Include="..\..\scroll_regs.cpp" />
