--- a/BreaksAPU/NSFPlayer/NSFPlayer.csproj
+++ b/BreaksAPU/NSFPlayer/NSFPlayer.csproj
@@ -14,6 +14,7 @@
    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
    <BaseOutputPath>Build\</BaseOutputPath>
+   <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
  </PropertyGroup>
 
 <ItemGroup>
