--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\..\debug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\regs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\regs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
