--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj
@@ -33,6 +33,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\..\clkgen.cpp" />
+    <ClCompile Include="..\..\regs.cpp" />
     <ClCompile Include="..\..\square.cpp" />
     <ClCompile Include="..\..\triangle.cpp" />
   </ItemGroup>
@@ -46,6 +47,7 @@
     <ClInclude Include="..\..\noise.h" />
     <ClInclude Include="..\..\pch.h" />
     <ClInclude Include="..\..\clkgen.h" />
+    <ClInclude Include="..\..\regs.h" />
     <ClInclude Include="..\..\square.h" />
     <ClInclude Include="..\..\triangle.h" />
   </ItemGroup>
