--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="..\..\regs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\dac.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\regs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\dac.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
