--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="..\..\dac.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\dac.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
