--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\..\common.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\env.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\env.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
