--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="..\..\env.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\pads.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\pch.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\env.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\pads.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
