--- a/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj
+++ b/BreaksAPU/APUSim/Scripts/VS2022/APUSim.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="..\..\env.cpp" />
     <ClCompile Include="..\..\length.cpp" />
     <ClCompile Include="..\..\noise.cpp" />
+    <ClCompile Include="..\..\pads.cpp" />
     <ClCompile Include="..\..\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -51,6 +52,7 @@
     <ClInclude Include="..\..\env.h" />
     <ClInclude Include="..\..\length.h" />
     <ClInclude Include="..\..\noise.h" />
+    <ClInclude Include="..\..\pads.h" />
     <ClInclude Include="..\..\pch.h" />
     <ClInclude Include="..\..\clkgen.h" />
     <ClInclude Include="..\..\regs.h" />
